<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <LinearLayout
    	android:layout_width="250dp"
    	android:layout_height="match_parent"
    	android:gravity="center"
    	android:orientation="vertical" >

	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_message" />
    
	<Button
		android:id="@+id/mFollowButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mFollowButton_message"
		android:drawablePadding="16dp"/>
	
	<Button
		android:id="@+id/mForwardButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mForwardButton_message"
		android:drawablePadding="16dp"/>

	<Button
		android:id="@+id/mBackwardButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mBackwardButton_message"
		android:drawablePadding="16dp"/>

	<Button
		android:id="@+id/mRotateButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mRotateButton_message"
		android:drawablePadding="16dp"/>
	
	<Button
		android:id="@+id/mParkButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/mParkButton_message"
		android:drawablePadding="16dp"/>
	
	</LinearLayout>
	
</LinearLayout>